package dk.cphbusiness.dat.carporteksamensproject.model.entities;

public enum RoofType {
    FLAT,
    SLOPE
}
